test/error/MethodStaticMutating.fu
public static class Test
{
	public static bool Run!() //ERROR: Static method cannot be mutating ('!')
	{
		return true;
	}
}
